[gd_scene load_steps=2 format=3 uid="uid://bl3r0kwwycrmw"]

[ext_resource type="Script" path="res://src/page.gd" id="1_2lug2"]

[node name="Page" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.997396
anchor_bottom = 0.881173
offset_top = -1.0
offset_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_2lug2")
metadata/_edit_use_anchors_ = true

[node name="Info" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Number" type="Label" parent="Info"]
layout_mode = 2
text = "0"

[node name="Seperator" type="Label" parent="Info"]
visible = false
layout_mode = 2
text = "|"

[node name="PageKey" type="Label" parent="Info"]
visible = false
layout_mode = 2
text = "key"

[node name="PageKeyLineEdit" type="LineEdit" parent="Info"]
visible = false
layout_mode = 2

[node name="PageKeyEditButton" type="CheckButton" parent="Info"]
layout_mode = 2
focus_mode = 0
text = "edit page key"

[node name="NextContainer" type="HBoxContainer" parent="Info"]
layout_mode = 2

[node name="Label" type="Label" parent="Info/NextContainer"]
layout_mode = 2
text = "->"

[node name="NextLineEdit" type="SpinBox" parent="Info/NextContainer"]
layout_mode = 2

[node name="NextKey" type="Label" parent="Info/NextContainer"]
layout_mode = 2
text = "-> 1 | pagekey"

[node name="TerminateCheck" type="CheckBox" parent="Info"]
layout_mode = 2
tooltip_text = "terminates the page, stopping the parser from reading the next one automatically. you should still set the next page index, as when you start reading dialog again, you may want to not have to set that page index manually."
focus_mode = 0
text = "terminate"

[node name="Controls" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="Add" type="Button" parent="Controls"]
layout_mode = 2
focus_mode = 0
text = "add line"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Lines" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 67.985)
layout_mode = 2
mouse_filter = 2

[connection signal="text_changed" from="Info/PageKeyLineEdit" to="." method="_on_page_key_line_edit_text_changed"]
[connection signal="toggled" from="Info/PageKeyEditButton" to="." method="_on_page_key_edit_button_toggled"]
[connection signal="value_changed" from="Info/NextContainer/NextLineEdit" to="." method="_on_next_line_edit_value_changed"]
[connection signal="pressed" from="Controls/Add" to="." method="_on_add_pressed"]
